--- a/src/views/pages/painel.ejs
+++ b/src/views/pages/painel.ejs
@@ -18,26 +18,63 @@
         html,
         body {
             height: 100%;
-            overflow: auto;
-            overflow-x: hidden;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
         }
 
         body {
-            font-family: Arial, sans-serif;
+            overflow-x: hidden;
+            background-color: #f5f5f5;
+        }
+
+        header,
+        main,
+        footer {
+            width: 100%;
+        }
+
+        header {
+            flex: none;
+        }
+
+        main {
+            flex: 1 0 auto;
+            margin: 3rem 0;
+            padding: 2rem;
             display: flex;
             flex-direction: column;
-            margin: 0;
-            background-color: #f5f5f5;
+            justify-content: flex-start;
+            box-sizing: border-box;
+            font-size: 1rem;
+        }
+
+        footer {
+            flex: none;
+        }
+
+        .footer-content {
+            flex-shrink: 0;
+            width: 100%;
+            border-top: 4px solid #00621D;
+            color: #00621D;
+            text-align: center;
+            padding: 0 0 1rem 0;
+            background-color: #f8f9fa;
+            font-size: 1rem;
         }
 
         .header-content {
             background: linear-gradient(to right, #00621D, #0BA23D);
-            padding: 20px 0 30px 0;
+            padding: 1.25rem;
             display: flex;
             flex-direction: column;
             align-items: center;
             color: white;
             position: relative;
+            font-size: 1rem;
+
         }
 
         .container-white {
@@ -49,33 +86,22 @@
             z-index: 10;
             padding: .5rem;
             border-bottom: 4px solid orange;
-            transform: translateY(-30px);
-        }
+            transform: translateY(-2rem);
 
+        }
 
         .logo {
             width: 100%;
-            max-width: 500px;
-            margin-bottom: 10px;
-        }
+            max-width: 31.25rem;
+            margin-bottom: 1.5rem;
 
-        h3 {
-            font-size: 1.5rem;
-            font-weight: 700;
-            text-align: center;
-        }
-
-        main {
-            flex: 1;
-            margin-top: 30px;
-            padding-bottom: 80px;
         }
 
         .systems-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 15px;
-            padding: 30px;
+            grid-template-columns: repeat(auto-fit, minmax(15.625rem, 1fr));
+            gap: 1rem;
+            padding: 1.875rem;
             cursor: pointer;
         }
 
@@ -85,12 +111,12 @@
             align-items: center;
             justify-content: center;
             background-color: white;
-            padding: 15px;
-            border-radius: 5px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            padding: 0.9375rem;
+            border-radius: 0.3125rem;
+            box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.1);
             text-align: center;
-            height: 150px;
-            min-width: 150px;
+            height: 9.375rem;
+            min-width: 9.375rem;
             transition: transform 0.2s, box-shadow 0.2s;
             text-decoration: none;
             color: inherit;
@@ -98,13 +124,13 @@
         }
 
         .system-box i {
-            font-size: 2em;
-            margin-bottom: 10px;
+            font-size: 1.8rem;
+            margin-bottom: 0.625rem;
         }
 
         .system-box:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+            transform: translateY(-0.125rem);
+            box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
         }
 
         .system-box div {
@@ -125,26 +151,18 @@
             border: none;
         }
 
-        .footer-content {
-            border-top: 4px solid #00621D;
+        
+        h3 {
+            font-size: 1.8rem;
             color: #00621D;
-            text-align: center;
-            padding: 10px 0;
-            background-color: #f8f9fa;
-            width: 100%;
-            position: relative;
+            font-weight: 700;
+            padding-top: 0.5rem;
         }
+
 
         footer h4 {
-            font-size: 1.2rem;
             padding-top: 1rem;
             margin-bottom: 0.3rem;
-            text-align: center;
-            font-weight: 700;
-        }
-
-        footer h5 {
-            font-size: 1rem;
             text-align: center;
             font-weight: 700;
         }
@@ -157,34 +175,42 @@
         /* Media Query para notebooks */
         @media (max-width: 1920px) {
             .logo {
-                max-width: 400px;
+                max-width: 25rem;
+                margin-bottom: 1rem;
             }
 
             .systems-grid {
-                grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-                padding: 20px;
-                gap: 10px;
+                grid-template-columns: repeat(auto-fit, minmax(12.5rem, 1fr));
+                padding: 1.25rem;
+                gap: 0.625rem;
             }
 
             .system-box {
-                min-height: 130px;
-                padding: 10px;
+                min-height: 8.125rem;
+                padding: 0.625rem;
                 font-size: 0.9rem;
             }
 
             .system-box i {
-                font-size: 1.5em;
-                margin-bottom: 8px;
+                font-size: 1.5rem;
+                margin-bottom: 0.5rem;
             }
 
+            .system-box h4{
+
+                font-size: 1.2rem;
+            }
 
             .container-white {
-                padding: 1rem 0 0.5rem 0;
-                transform: translateY(-25px);
+                padding: 0.5rem;
+                transform: translateY(-1.5625rem);
             }
 
             h3 {
-                font-size: 1.2rem;
+                font-size: 1.6rem;
+                color: #00621D;
+                font-weight: 700;
+                padding-top: 0.2rem;
             }
 
             h4 {
@@ -192,12 +218,12 @@
             }
 
             footer h4 {
-                font-size: 1rem;
+                font-size: 1.2rem;
                 font-weight: 700;
             }
 
             footer h5 {
-                font-size: 0.8rem;
+                font-size: 1rem;
                 font-weight: 700;
             }
 
@@ -284,14 +310,14 @@
     </main>
 
     <footer>
-        <div class="footer-content">
-            <h4>COLOG - Comando Logistico da PMCE</h4>
-            <h5 class="mb-0 fw-bold">CEGPA / NUCPA</h5>
+        <div class="footer-content bg-light my-0">
+            <h4 class="m-0 fs-5">COLOG - Comando Logistico da PMCE</h4>
+            <h5 class="m-1 fw-bold ">CEGPA / NUCPA</h5>
             <div class="hr-div d-flex justify-content-center">
-                <hr class="w-25 m-1">
+                <hr class="w-50 m-1">
             </div>
             <p class="m-0">R. Carlos Araújo, S/N - Olavo Oliveira</p>
-            <p>Fone: 85 3101.3570 / 3101.3571 - E-mail: informatica@policiamilitar.ce.gov.br <br>
+            <p class="m-0">Fone: 85 3101.3570 / 3101.3571 - E-mail: informatica@policiamilitar.ce.gov.br <br>
                 Horário de funcionamento: <br>De segunda a sexta de 8h às 12h e de 13h às 16:30hs</p>
         </div>
     </footer>
