--- a/src/views/pages/register.ejs
+++ b/src/views/pages/register.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página de Login</title>
+    <title>Registrar</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="/css/styles.css">
@@ -17,35 +17,32 @@
 <body>
     <div class="container-fluid d-flex align-items-center justify-content-center min-vh-100">
         <div style="background-color: var(--secondary-light-1);" class="border p-4 py-5 rounded shadow-lg">
-            <h1 class="text-center display-6 fw-bold mb-4 text-success" >Login</h1>
+            <h1 class="text-center display-6 fw-bold mb-4 text-success" >Registrar</h1>
             <hr>
             <% if (erro) { %>
                 <div class="alert alert-danger">
                     <%= erro %>
                 </div>
             <% } %>
-            <form action="/login" method="POST">
+            <form action="/register" method="POST">
                 <div class="form-group mb-3">
                     <label for="user" class="form-label">Usuário</label>
                     <div class="input-group">
                         <span class="input-group-text"><i class="bi bi-person"></i></span>
-                        <input type="text" class="form-control input-custom" id="user" name="user" placeholder="Entre com o usuário" autocomplete="username" required>
+                        <input type="text" class="form-control input-custom" id="user" name="user" placeholder="Entre com o usuário" required>
                     </div>
                 </div>
                 <div class="form-group mb-3">
                     <label for="senha" class="form-label">Senha</label>
                     <div class="input-group">
                         <span class="input-group-text"><i class="bi bi-lock"></i></span>
-                        <input type="password" class="form-control input-custom" id="senha" name="senha" placeholder="Sua Senha" autocomplete="current-password" required>
+                        <input type="password" class="form-control input-custom" id="senha" name="senha" placeholder="Sua Senha" required>
                     </div>
                 </div>
                 <div class="d-flex justify-content-center">
-                    <button type="submit" class="btn btn-success mt-4 w-100">Entrar</button>
+                    <button type="submit" class="btn btn-success mt-4 w-100">Registrar</button>
                 </div>
             </form>
-            <div class="text-center mt-4">
-                <a href="/register" class="text-decoration-none text-primary">Primeiro acesso? Cadastre-se aqui</a>
-            </div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
