--- a/src/views/pages/login.ejs
+++ b/src/views/pages/login.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,47 +13,57 @@
             outline: 0;
             box-shadow: none !important;
         }
+
+        .text-secondary:hover {
+            color: #2e7d32 !important;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+        }
     </style>
 </head>
+
 <body>
     <div class="container-fluid d-flex align-items-center justify-content-center min-vh-100">
         <div style="background-color: var(--secondary-light-1);" class="border p-4 py-5 rounded shadow-lg">
-            <h1 class="text-center display-6 fw-bold mb-4 text-success" >Login</h1>
+            <h1 class="text-center display-6 fw-bold mb-4 text-success">Login</h1>
             <hr>
             <% if (erro) { %>
                 <div class="alert alert-danger">
                     <%= erro %>
                 </div>
-            <% } %>
-            <form action="/login" method="POST">
-                <div class="form-group mb-3">
-                    <label for="user" class="form-label">Usuário</label>
-                    <div class="input-group">
-                        <span class="input-group-text"><i class="bi bi-person"></i></span>
-                        <input type="text" class="form-control input-custom" id="user" name="user" placeholder="Entre com o usuário" autocomplete="username" required>
+                <% } %>
+                    <form action="/login" method="POST">
+                        <div class="form-group mb-3">
+                            <label for="user" class="form-label">Usuário</label>
+                            <div class="input-group">
+                                <span class="input-group-text"><i class="bi bi-person"></i></span>
+                                <input type="text" class="form-control input-custom" id="user" name="user"
+                                    placeholder="Entre com o usuário" autocomplete="username" required>
+                            </div>
+                        </div>
+                        <div class="form-group mb-3">
+                            <label for="senha" class="form-label">Senha</label>
+                            <div class="input-group">
+                                <span class="input-group-text"><i class="bi bi-lock"></i></span>
+                                <input type="password" class="form-control input-custom" id="senha" name="senha"
+                                    placeholder="Sua Senha" autocomplete="current-password" required>
+                            </div>
+                        </div>
+                        <div class="d-flex justify-content-center">
+                            <button type="submit" class="btn btn-success mt-4 w-100">Entrar</button>
+                        </div>
+                    </form>
+                    <div class="text-center mt-4">
+                        <a href="/register" class="text-decoration-none text-secondary">Primeiro acesso? Cadastre-se
+                            aqui</a>
                     </div>
-                </div>
-                <div class="form-group mb-3">
-                    <label for="senha" class="form-label">Senha</label>
-                    <div class="input-group">
-                        <span class="input-group-text"><i class="bi bi-lock"></i></span>
-                        <input type="password" class="form-control input-custom" id="senha" name="senha" placeholder="Sua Senha" autocomplete="current-password" required>
-                    </div>
-                </div>
-                <div class="d-flex justify-content-center">
-                    <button type="submit" class="btn btn-success mt-4 w-100">Entrar</button>
-                </div>
-            </form>
-            <div class="text-center mt-4">
-                <a href="/register" class="text-decoration-none text-primary">Primeiro acesso? Cadastre-se aqui</a>
-            </div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-        window.onload = function() {
+        window.onload = function () {
             document.getElementById('user').focus();
         };
     </script>
 </body>
+
 </html>
