--- a/src/views/pages/register.ejs
+++ b/src/views/pages/register.ejs
@@ -17,32 +17,44 @@
 <body>
     <div class="container-fluid d-flex align-items-center justify-content-center min-vh-100">
         <div style="background-color: var(--secondary-light-1);" class="border p-4 py-5 rounded shadow-lg">
-            <h1 class="text-center display-6 fw-bold mb-4 text-success" >Registrar</h1>
+            <h1 class="text-center display-6 fw-bold mb-4 text-success">Registrar</h1>
             <hr>
             <% if (erro) { %>
                 <div class="alert alert-danger">
                     <%= erro %>
                 </div>
             <% } %>
-            <form action="/register" method="POST">
-                <div class="form-group mb-3">
-                    <label for="user" class="form-label">Usuário</label>
-                    <div class="input-group">
-                        <span class="input-group-text"><i class="bi bi-person"></i></span>
-                        <input type="text" class="form-control input-custom" id="user" name="user" placeholder="Entre com o usuário" required>
+
+            <% if (success) { %>
+                <div class="alert alert-success">
+                    <%= success %>
+                </div>
+                <script>
+                    setTimeout(function() {
+                        window.location.href = "/login";
+                    }, 2000);  // 2 segundos antes de redirecionar
+                </script>
+            <% } else { %>
+                <form action="/register" method="POST">
+                    <div class="form-group mb-3">
+                        <label for="user" class="form-label">Usuário</label>
+                        <div class="input-group">
+                            <span class="input-group-text"><i class="bi bi-person"></i></span>
+                            <input type="text" class="form-control input-custom" id="user" name="user" placeholder="Entre com o usuário" required>
+                        </div>
                     </div>
-                </div>
-                <div class="form-group mb-3">
-                    <label for="senha" class="form-label">Senha</label>
-                    <div class="input-group">
-                        <span class="input-group-text"><i class="bi bi-lock"></i></span>
-                        <input type="password" class="form-control input-custom" id="senha" name="senha" placeholder="Sua Senha" required>
+                    <div class="form-group mb-3">
+                        <label for="senha" class="form-label">Senha</label>
+                        <div class="input-group">
+                            <span class="input-group-text"><i class="bi bi-lock"></i></span>
+                            <input type="password" class="form-control input-custom" id="senha" name="senha" placeholder="Sua Senha" required>
+                        </div>
                     </div>
-                </div>
-                <div class="d-flex justify-content-center">
-                    <button type="submit" class="btn btn-success mt-4 w-100">Registrar</button>
-                </div>
-            </form>
+                    <div class="d-flex justify-content-center">
+                        <button type="submit" class="btn btn-success mt-4 w-100">Registrar</button>
+                    </div>
+                </form>
+            <% } %>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
@@ -50,6 +62,10 @@
         window.onload = function() {
             document.getElementById('user').focus();
         };
+
+        document.getElementById('user').addEventListener('input', function() {
+            this.value = this.value.toLowerCase();
+        });
     </script>
 </body>
 </html>
