--- a/src/views/pages/tabelaEstoque.ejs
+++ b/src/views/pages/tabelaEstoque.ejs
@@ -85,42 +85,21 @@
                         <% if (estoque.length> 0) { %>
                             <% estoque.forEach(function(item) { %>
                                 <tr>
-                                    <td class="py-1 text-center">
-                                        <%= item.id %>
-                                    </td>
-                                    <td class="py-1 text-center">
-                                        <%= new Date(item.data_de_entrada).toLocaleDateString('pt-BR') %>
-                                    </td>
-                                    <td class="py-1">
-                                        <%= item.descricao %>
-                                    </td>
-                                    <td class="py-1 text-center">
-                                        <%= item.tombo %>
-                                    </td>
-                                    <td class="py-1 text-center">
-                                        <%= item.categoria %>
-                                    </td>
+                                    <td class="py-1 text-center"> <%= item.id %> </td>
+                                    <td class="py-1 text-center"> <%= new Date(item.data_de_entrada).toLocaleDateString('pt-BR') %> </td>
+                                    <td class="py-1"> <%= item.descricao %> </td>
+                                    <td class="py-1 text-center"> <%= item.tombo %> </td>
+                                    <td class="py-1 text-center"> <%= item.categoria %> </td>
                                     <!-- <td class="py-1 text-center">
-                                        <%= item.conta_contabil %>
-                                    </td>
+                                        <%= item.conta_contabil %> </td>
                                     <td class="py-1 text-center">
-                                        <%= item.doc_origem %>
-                                    </td> -->
-                                    <td class="py-1 text-center">
-                                        <%= item.estoque %>
-                                    </td>
-                                    <!-- <td class="py-1 text-center">R$ <%= Number(item.valor).toFixed(2) %>
-                                    </td> -->
-                                    <td class="py-1 text-center">
-                                        <%= item.situacao %>
-                                    </td>
+                                        <%= item.doc_origem %> </td> -->
+                                    <td class="py-1 text-center"> <%= item.estoque %> </td>
+                                    <!-- <td class="py-1 text-center">R$ <%= Number(item.valor).toFixed(2) %> </td> -->
+                                    <td class="py-1 text-center"> <%= item.situacao %> </td>
                                     <td class="py-1 text-center ">
-                                        <a href="/estoque/visualizar/<%= item.id %>"
-                                            class="btn btn-secondary btn-sm view-btn btn-action">Detalhes</a>
-                                        <a href="/estoque/edit/<%= item.id %>"
-                                            class="btn btn-warning btn-sm btn-action">Editar</a>
-                                        <a href="/estoque/edit/<%= item.id %>"
-                                            class="btn btn-danger btn-sm btn-action">Excluir</a>
+                                        <a href="/estoque/visualizar/<%= item.id %>"class="btn btn-secondary btn-sm view-btn btn-action">Detalhes</a>
+                                        <a href="/excluir/<%= item.id %>" class="btn btn-danger btn-sm btn-action">Excluir</a>
                                     </td>
                                 </tr>
                             <% }); %>
@@ -203,6 +182,41 @@
                         }
                     } catch (error) {
                         console.error('Erro ao buscar informações do tombo:', error);
+                    }
+                });
+            });
+        });
+
+        document.addEventListener('DOMContentLoaded', () => {
+            const deleteButtons = document.querySelectorAll('.btn-action');
+
+            deleteButtons.forEach(button => {
+                button.addEventListener('click', async (event) => {
+                event.preventDefault();
+                
+                    // Adicionando o prompt de confirmação
+                    const confirmation = confirm("Você tem certeza que deseja excluir este item? Esse processo é irreversível.");
+
+                    if (!confirmation) {
+                        return; // Se o usuário cancelar, não faça nada
+                    }
+                    
+                    const url = event.target.href;
+                    try {
+                        const response = await fetch(url, { method: 'DELETE' });
+                        const result = await response.json();
+                        
+                        // Exibir feedback para o usuário
+                        if (response.ok) {
+                            alert('Item deletado com sucesso!');
+                            // Atualizar a página ou remover o item da tabela
+                            location.reload();
+                        } else {
+                            alert(result.msg);
+                        }
+                    } catch (error) {
+                        console.error('Erro ao deletar item:', error);
+                        alert('Erro ao deletar o item');
                     }
                 });
             });
