--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,3 +1,7 @@
+<head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+</head>
+
 <nav class="navbar navbar-expand-lg py-3 navbar-light  d-flex justify-content-between">
   <div class="container-fluid ">
     <div class="d-flex justify-content-between w-100 mx-5">
@@ -17,7 +21,10 @@
         </form>
       </div>
       <div class="col-auto mt-1">
-        <a style="border: 1px solid #fff;" href="/logout" class="btn btn-danger mx-2 w-100 btn-header fw-bold">Sair</a>
+        <a style="border: 1px solid #fff;" href="/logout" class="btn btn-danger mx-2 w-100 btn-header fw-bold">
+          <i class="fas fa-door-open fs-5 me-1 fa-2x"></i> Sair
+      </a>
+      
       </div>
     </div>
   </div>
