fix: pequena modificação no layout

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -23,6 +23,10 @@ main {
   margin-top: 5rem;
 }
 
+.caixa-externa{
+  background-color: #f8fff29a;
+}
+
 .navbar {
   position: fixed;
   width: 100%;
