--- a/src/views/pages/cadastrarEstoque.ejs
+++ b/src/views/pages/cadastrarEstoque.ejs
@@ -20,7 +20,7 @@
         <%- include('../partials/breadcrumb', { pageTitle: 'Cadastrar Entrada' }) %>
       </div>
 
-      <div class=" border bg-light p-4 shadow-sm rounded">
+      <div class=" border caixa-externa p-4 shadow-sm rounded">
         <form id="formulario-entrada" action="/entrada" method="post">
 
           <input id="id" type="hidden">
