--- a/src/views/pages/painel.ejs
+++ b/src/views/pages/painel.ejs
@@ -13,9 +13,9 @@
             /* verde escuro */
             --color-primary: rgb(53, 110, 0);
             /* verde claro */
-            --secondary-color: #f8fff291;
+            --secondary-color: #f8fff244;
             /* vermelho claro */
-            --terceary-color: #f7d6d691;
+            --terceary-color: #f7d6d642;
          }
 
         * {
@@ -263,7 +263,7 @@
         </div>
     </header>
 
-    <main class="container bg-light border">
+    <main class="container caixa-externa border">
         <div class="systems-grid">
             <!-- Conteúdo dos botões aqui -->
             <a href="/entrada" class="system-box link">
