--- a/src/views/pages/register.ejs
+++ b/src/views/pages/register.ejs
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div class="container-fluid d-flex align-items-center justify-content-center min-vh-100">
-        <div style="background-color: var(--secondary-light-1);" class="border p-4 py-5 rounded shadow-lg">
+        <div class="border p-4 py-5 rounded shadow-lg caixa-externa">
             <h1 class="text-center display-6 fw-bold mb-4 text-success">Registrar</h1>
             <hr>
             <% if (erro) { %>
