--- a/src/views/pages/relatorios.ejs
+++ b/src/views/pages/relatorios.ejs
@@ -19,7 +19,7 @@
         <%- include('../partials/breadcrumb', { pageTitle: 'Relatórios de Estoque' }) %>
       </div>
 
-      <div class=" border bg-light p-4 shadow-sm rounded">
+      <div class=" border caixa-externa p-4 shadow-sm rounded">
         <div class="table-container">
           <div class="row">
             <div class="mb-3">
