--- a/src/views/pages/tabelaEstoque.ejs
+++ b/src/views/pages/tabelaEstoque.ejs
@@ -60,7 +60,7 @@
             <%- include('../partials/breadcrumb', { pageTitle: 'Estoque Atual' }) %>
         </div>
 
-        <div class="border bg-light p-4 shadow-sm rounded">
+        <div class="border caixa-externa p-4 shadow-sm rounded">
             <div class="row align-items-center mb-3">
                 <h2 class="text-center text-success mb-3 mt-3 fw-bold">Estoque Atual</h2>
             </div>
