--- a/src/views/pages/tabelaSaidaEstoque.ejs
+++ b/src/views/pages/tabelaSaidaEstoque.ejs
@@ -46,7 +46,7 @@
         <%- include('../partials/breadcrumb', { pageTitle: 'Itens Pagos' }) %>
       </div>
 
-      <div class="border bg-light p-4 shadow-sm rounded">
+      <div class="border caixa-externa p-4 shadow-sm rounded">
         <div class="row align-items-center mb-3">
           <h2 class="text-center text-success mb-3 mt-3 fw-bold">Itens que saíram do estoque</h2>
         </div>
