--- a/src/views/pages/historicoMovimentacao.ejs
+++ b/src/views/pages/historicoMovimentacao.ejs
@@ -56,7 +56,7 @@
         <%- include('../partials/breadcrumb', { pageTitle: 'Histórico' }) %>
       </div>
 
-      <div class=" border bg-light p-4 shadow-sm rounded">
+      <div class=" border caixa-externa p-4 caixa-externa shadow-sm rounded">
         <div class="table-container">
           <div class="row">
             <div class="mb-3">
