--- a/src/views/pages/pesquisaAvancada.ejs
+++ b/src/views/pages/pesquisaAvancada.ejs
@@ -36,7 +36,7 @@
         <%- include('../partials/breadcrumb', { pageTitle: 'Pesquisa' }) %>
       </div>
 
-      <div class=" border bg-light p-4 shadow-sm rounded">
+      <div class=" border p-4 caixa-externa shadow-sm rounded">
         <div class="table-container">
           <div class="row mt-3">
             <div class="col-md-12">
