--- a/src/views/pages/qtde_disponivel_por_item.ejs
+++ b/src/views/pages/qtde_disponivel_por_item.ejs
@@ -42,7 +42,7 @@
     <div class="pb-3 mt-3">
         <%- include('../partials/breadcrumb', { pageTitle: 'Estoque de Itens Únicos' }) %>
     </div>
-    <div class="border bg-light p-4 shadow-sm rounded">
+    <div class="border caixa-externa p-4 shadow-sm rounded">
         <div class="row align-items-center mb-3">
             <h2 class="text-center text-success mb-3 mt-3 fw-bold">Estoque de Itens Únicos</h2>
         </div>
