--- a/src/views/pages/saidaEstoque.ejs
+++ b/src/views/pages/saidaEstoque.ejs
@@ -43,7 +43,7 @@
         <%- include('../partials/breadcrumb', { pageTitle: 'Itens a serem pagos' }) %>
       </div>
 
-      <div class=" border bg-light p-4 shadow-sm rounded">
+      <div class=" border caixa-externa p-4 shadow-sm rounded">
 
         <div class="row align-items-center mb-3">
           <h2 class="text-center text-success mb-3 mt-3 fw-bold">Formulário de Saída</h2>
