--- a/src/views/pages/painel.ejs
+++ b/src/views/pages/painel.ejs
@@ -78,8 +78,8 @@
             top: 0;
             width: 100%;
             z-index: 10;
-            padding: .5rem;
-            border-bottom: 4px solid orange;
+           
+            border-bottom: 8px solid orange;
             transform: translateY(-2rem);
 
         }
@@ -258,7 +258,7 @@
             </div>
         </div>
 
-        <div class="container-white container">
+        <div class="container-white container p-1">
             <h3>Painel de Controle</h3>
         </div>
     </header>
