--- a/src/views/pages/qtde_disponivel_por_item.ejs
+++ b/src/views/pages/qtde_disponivel_por_item.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Tabela de Itens Únicos no Estoque</title>
+    <title>Quantitativo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="/css/styles.css">
@@ -36,41 +36,60 @@
 </head>
 
 <body>
-<%- include('../partials/header') %>
-<div class="caixa container p-4">
-    <!-- breadcrumb -->
-    <div class="pb-3 mt-3">
-        <%- include('../partials/breadcrumb', { pageTitle: 'Estoque de Itens Únicos' }) %>
-    </div>
-    <div class="border caixa-externa p-4 shadow-sm rounded">
-        <div class="row align-items-center mb-3">
-            <h2 class="text-center text-success mb-3 mt-3 fw-bold">Estoque de Itens Únicos</h2>
+    <%- include('../partials/header') %>
+
+    <div class="caixa container p-4">
+
+        <!-- breadcrumb -->
+        <div class="pb-0 mt-2">
+            <%- include('../partials/breadcrumb', { pageTitle: 'Quantitativo' }) %>
         </div>
-        <div class="table-container">
-            <table class="table table-striped table-hover mb-0">
-                <thead>
-                <tr>
-                    <th>Descrição</th>
-                    <th class="text-center">Quantidade</th>
-                </tr>
-                </thead>
-                <tbody>
-                <% if (estoque.length > 0) { %>
-                    <% estoque.forEach(function (item) { %>
-                        <tr>
-                            <td class="py-1 text-start"> <%= item.descricao %> </td>
-                            <td class="py-1 text-center"> <%= item.quantidade %> </td>
-                        </tr>
-                    <% }); %>
-                <% } else { %>
+
+        <div class="row d-flex justify-content-center mb-4">
+            <div class="col-md-1 ms-3">
+                <a href="/tabela/estoqueatual" class="btn btn-outline-success mx-2 w-100 btn-header fw-bold">Geral</a>
+            </div>
+            <div class="col-md-1 ms-3">
+                <a href="/tabela/itens-novos" class="btn btn-outline-success mx-2 w-100 btn-header fw-bold">Itens Novo</a>
+            </div>
+            <div class="col-md-1 ms-3">
+                <a href="/tabela/itens-usados" class="btn btn-outline-success mx-2 w-100 btn-header fw-bold">Itens Usados</a>
+            </div>
+            <div class="col-md-1 ms-3">
+                <a href="/qtde-unica" class="btn btn-outline-success mx-2 w-100 btn-header fw-bold">Quantitativo</a>
+            </div>
+        </div>
+
+
+        <div class="border caixa-externa p-4 shadow-sm rounded">
+            <div class="row align-items-center mb-3">
+                <h2 class="text-center text-success mb-3 mt-0 fw-bold">Quantitativo</h2>
+            </div>
+            <div class="table-container">
+                <table class="table table-striped table-hover mb-0">
+                    <thead>
                     <tr>
-                        <td colspan="2" class="text-center">Ainda não há itens cadastrados</td>
+                        <th>Descrição</th>
+                        <th class="text-center">Quantidade</th>
                     </tr>
-                <% } %>
-                </tbody>
-            </table>
+                    </thead>
+                    <tbody>
+                    <% if (estoque.length > 0) { %>
+                        <% estoque.forEach(function (item) { %>
+                            <tr>
+                                <td class="py-1 text-start"> <%= item.descricao %> </td>
+                                <td class="py-1 text-center"> <%= item.quantidade %> </td>
+                            </tr>
+                        <% }); %>
+                    <% } else { %>
+                        <tr>
+                            <td colspan="2" class="text-center">Ainda não há itens cadastrados</td>
+                        </tr>
+                    <% } %>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
-</div>
 </body>
 </html>
