--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,5 +1,10 @@
 <head>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <style>
+    i{
+      font-size: 1rem !important;
+    }
+  </style>
 </head>
 
 <nav class="navbar navbar-expand-lg py-3 navbar-light  d-flex justify-content-between">
@@ -10,8 +15,7 @@
       </div>
       <div class="col-auto d-flex align-items-center">
         <form class="d-flex align-items-center w-100">
-          <a href="/tabela/estoqueatual" class="btn btn-outline-light mx-2 w-100 btn-header fw-bold">Estoque Atual</a>
-          <a href="/qtde-unica" class="btn btn-outline-light mx-2 w-100 btn-header fw-bold">Em estoque</a>
+          <a href="/tabela/estoqueatual" class="btn btn-outline-light mx-2 w-100 btn-header fw-bold">Estoque</a>
           <a href="/entrada" class="btn btn-outline-light mx-2 w-100 btn-header fw-bold">Entrada</a>
           <a href="/saida" class="btn btn-outline-light mx-2 w-100 btn-header fw-bold">Saída</a>
           <a href="/estoque/itenspagos" class="btn btn-outline-light mx-2 w-100 btn-header fw-bold">Ítens Saídos</a>
@@ -22,7 +26,7 @@
       </div>
       <div class="col-auto mt-1">
         <a style="border: 1px solid #fff;" href="/logout" class="btn btn-danger mx-2 w-100 btn-header fw-bold">
-          <i class="fas fa-door-open fs-5 me-1 fa-2x"></i> Sair
+          <i class="fas fa-door-open  me-1 fa-2x"></i> Sair
       </a>
       
       </div>
