feat: criação da rota de itens usados e colocação da class "active" do boostrap na pagina atual do estoque

--- a/src/views/pages/painel.ejs
+++ b/src/views/pages/painel.ejs
@@ -283,17 +283,11 @@
             <a href="/tabela/estoqueatual" class="system-box link">
                 <div>
                     <i class="fas fa-box-open text-success fa-2x"></i>
-                    <h4 class="text-success">Tabela do Estoque Atual</h4>
-                    <p class="text-success">Estoque Atual</p>
+                    <h4 class="text-success">Estoque</h4>
+                    <p class="text-success">Tabelas quantitativa e qualitativa</p>
                 </div>
             </a>
-            <a href="/qtde-unica" class="system-box link">
-                <div>
-                    <i class="fas fa-list-ol text-success fa-2x"></i>
-                    <h4 class="text-success">Quantidade De itens</h4>
-                    <p class="text-success">Descrição e quantidade de itens disponíveis</p>
-                </div>
-            </a>
+     
             <a href="/estoque/itenspagos" class="system-box link">
                 <div>
                     <i class="fas fa-boxes text-success fa-2x"></i>
