--- a/src/views/pages/qtde_disponivel_por_item.ejs
+++ b/src/views/pages/qtde_disponivel_por_item.ejs
@@ -56,7 +56,7 @@
                 <a href="/tabela/itens-usados" class="btn btn-outline-success mx-2 w-100 btn-header fw-bold">Itens Usados</a>
             </div>
             <div class="col-md-1 ms-3">
-                <a href="/qtde-unica" class="btn btn-outline-success mx-2 w-100 btn-header fw-bold">Quantitativo</a>
+                <a href="/qtde-unica" class="btn btn-outline-success mx-2 w-100 btn-header fw-bold nav-link active py-2">Quantitativo</a>
             </div>
         </div>
 
