--- a/src/views/pages/tabelaItensNovos.ejs
+++ b/src/views/pages/tabelaItensNovos.ejs
@@ -59,7 +59,7 @@
      
         <!-- breadcrumb -->
         <div class="pb-0 mt-2">
-            <%- include('../partials/breadcrumb', { pageTitle: 'Estoque Geral' }) %>
+            <%- include('../partials/breadcrumb', { pageTitle: 'Tabela com os itens novos' }) %>
         </div>
 
         <div class="row d-flex justify-content-center mb-4">
@@ -67,7 +67,7 @@
                 <a href="/tabela/estoqueatual" class="btn btn-outline-success mx-2 w-100 btn-header fw-bold">Geral</a>
             </div>
             <div class="col-md-1 ms-3">
-                <a href="/tabela/itens-novos" class="btn btn-outline-success mx-2 w-100 btn-header fw-bold">Itens Novo</a>
+                <a href="/tabela/itens-novos" class="btn btn-outline-success mx-2 w-100 btn-header fw-bold nav-link active py-2">Itens Novo</a>
             </div>
             <div class="col-md-1 ms-3">
                 <a href="/tabela/itens-usados" class="btn btn-outline-success mx-2 w-100 btn-header fw-bold">Itens Usados</a>
