--- a/src/views/pages/tabelaItensUsados.ejs
+++ b/src/views/pages/tabelaItensUsados.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tabela com estoque geral</title>
+    <title>Tabela com os itens Usados</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="/css/styles.css">
@@ -54,32 +54,33 @@
 <body>
     <%- include('../partials/header') %>
     
+    
     <div class="caixa container p-4">
      
         <!-- breadcrumb -->
         <div class="pb-0 mt-2">
-            <%- include('../partials/breadcrumb', { pageTitle: 'Estoque Geral' }) %>
+            <%- include('../partials/breadcrumb', { pageTitle: 'Tabela com os itens Usados' }) %>
         </div>
 
-           
         <div class="row d-flex justify-content-center mb-4">
             <div class="col-md-1 ms-3">
-                <a href="/tabela/estoqueatual" class="btn btn-outline-success mx-2 w-100 btn-header fw-bold nav-link active py-2">Geral</a>
+                <a href="/tabela/estoqueatual" class="btn btn-outline-success mx-2 w-100 btn-header fw-bold">Geral</a>
             </div>
             <div class="col-md-1 ms-3">
                 <a href="/tabela/itens-novos" class="btn btn-outline-success mx-2 w-100 btn-header fw-bold">Itens Novo</a>
             </div>
             <div class="col-md-1 ms-3">
-                <a href="/tabela/itens-usados" class="btn btn-outline-success mx-2 w-100 btn-header fw-bold">Itens Usados</a>
+                <a href="/tabela/itens-usados" class="btn btn-outline-success mx-2 w-100 btn-header fw-bold nav-link active py-2">Itens Usados</a>
             </div>
             <div class="col-md-1 ms-3">
                 <a href="/qtde-unica" class="btn btn-outline-success mx-2 w-100 btn-header fw-bold">Quantitativo</a>
             </div>
         </div>
 
+
         <div class="border caixa-externa p-4 shadow-sm rounded">
             <div class="row align-items-center mb-3">
-                <h2 class="text-center text-success mb-3 mt-0 fw-bold">Estoque Geral</h2>
+                <h2 class="text-center text-success mb-3 mt-0 fw-bold">Itens Usados</h2>
             </div>
             <div class="table-container">
                 <table class="table table-striped table-hover mb-0">
@@ -99,8 +100,8 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <% if (estoque.length> 0) { %>
-                            <% estoque.forEach(function(item) { %>
+                        <% if (usados.length > 0) { %>
+                            <% usados.forEach(function(item) { %>
                                 <tr>
                                     <td class="py-1 text-center"> <%= item.id %> </td>
                                     <td class="py-1 text-center"> <%= new Date(item.data_de_entrada).toLocaleDateString('pt-BR') %> </td>
